--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>4.1.3</version>
         </dependency>
         <dependency>
+            <groupId>apache</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.15</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.13</version>
