--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <name>Sonatype</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>http://repo1.maven.org/maven2/</url>
+        </repository>
     </repositories>
 
     <dependencies>
