--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,11 @@
             <artifactId>querydsl-core</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
-            <groupId>apache</groupId>
+            <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
