--- a/pom.xml
+++ b/pom.xml
@@ -116,5 +116,26 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <profiles>
+        <profile>
+            <id>development</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-core</artifactId>
+                    <version>1.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-gpio-extension</artifactId>
+                    <version>1.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-device</artifactId>
+                    <version>1.1</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
