--- a/pom.xml
+++ b/pom.xml
@@ -95,21 +95,6 @@
             <version>4.1.3</version>
         </dependency>
         <dependency>
-            <groupId>com.pi4j</groupId>
-            <artifactId>pi4j-core</artifactId>
-            <version>1.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.pi4j</groupId>
-            <artifactId>pi4j-gpio-extension</artifactId>
-            <version>1.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.pi4j</groupId>
-            <artifactId>pi4j-device</artifactId>
-            <version>1.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.0</version>
@@ -117,6 +102,29 @@
         </dependency>
     </dependencies>
     <profiles>
+        <profile>
+            <id>pi</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-core</artifactId>
+                    <version>1.2-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-gpio-extension</artifactId>
+                    <version>1.2-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-device</artifactId>
+                    <version>1.2-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
         <profile>
             <id>development</id>
             <dependencies>
