--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <version>9.4.9.v20180320</version>
         </dependency>
         <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-server</artifactId>
+        <version>9.4.9.v20180320</version>
+    </dependency>
+        <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-core</artifactId>
             <version>4.1.3</version>
