fix in dao and cors

--- a/pom.xml
+++ b/pom.xml
@@ -44,18 +44,6 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>sonatype</id>
-            <name>Sonatype</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>http://repo1.maven.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
 
@@ -155,17 +143,17 @@
                 <dependency>
                     <groupId>com.pi4j</groupId>
                     <artifactId>pi4j-core</artifactId>
-                    <version>1.2-SNAPSHOT</version>
+                    <version>1.2</version>
                 </dependency>
                 <dependency>
                     <groupId>com.pi4j</groupId>
                     <artifactId>pi4j-gpio-extension</artifactId>
-                    <version>1.2-SNAPSHOT</version>
+                    <version>1.2</version>
                 </dependency>
                 <dependency>
                     <groupId>com.pi4j</groupId>
                     <artifactId>pi4j-device</artifactId>
-                    <version>1.2-SNAPSHOT</version>
+                    <version>1.2</version>
                 </dependency>
             </dependencies>
         </profile>
