--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.1-jre</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
@@ -100,6 +104,22 @@
             <artifactId>querydsl-core</artifactId>
             <version>4.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-gpio-extension</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-device</artifactId>
+            <version>1.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -133,49 +153,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <profiles>
-        <profile>
-            <id>pi</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-core</artifactId>
-                    <version>1.2</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-gpio-extension</artifactId>
-                    <version>1.2</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-device</artifactId>
-                    <version>1.2</version>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>development</id>
-            <dependencies>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-core</artifactId>
-                    <version>1.1</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-gpio-extension</artifactId>
-                    <version>1.1</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.pi4j</groupId>
-                    <artifactId>pi4j-device</artifactId>
-                    <version>1.1</version>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
 </project>
